<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.onsystem</groupId>
    <artifactId>wscapp-pantheon</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>wscapp-pantheon</name>
    <url>http://maven.apache.org</url>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <org.projectlombok.version>1.18.30</org.projectlombok.version>

    </properties>

    <modules>
        <module>wscapp-pantheon-boot</module>
        <module>wscapp-pantheon-api</module>
        <module>wscapp-pantheon-api/wscapp-pantheon-api-dto</module>
        <module>wscapp-pantheon-api/wscapp-pantheon-api-interface</module>
        <module>wscapp-pantheon-model</module>
        <module>wscapp-pantheon-controller</module>
    </modules>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.onsystem</groupId>
                <artifactId>wscapp-pantheon-boot</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.onsystem</groupId>
                <artifactId>wscapp-pantheon-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.onsystem</groupId>
                <artifactId>wscapp-pantheon-api-request</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.onsystem</groupId>
                <artifactId>wscapp-pantheon-api-response</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.onsystem</groupId>
                <artifactId>wscapp-pantheon-api-interfaces</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.onsystem</groupId>
                <artifactId>wscapp-pantheon-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.onsystem</groupId>
                <artifactId>wscapp-pantheon-controller</artifactId>
                <version>${project.version}</version>
            </dependency>


            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${org.projectlombok.version}</version>
                <scope>provided</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- Otros plugins ... -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.10</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


</project>
